docs(api): update api docs
