# app/openapi-spec.yaml
@@ -34,7 +34,7 @@ paths:
               schema:
                 $ref: "#/components/schemas/GenericResponse"
         "500":
-          description: Internal server error or Unidentified database error
+          description: Internal server error
           content:
             application/json:
               schema:
@@ -143,7 +143,7 @@ paths:
               schema:
                 $ref: "#/components/schemas/GenericResponse"
         "403":
-          description: This user is associated with a social login
+          description: This user is associated with a social login and has no password
           content:
             application/json:
               schema:
@@ -156,7 +156,7 @@ paths:
                 $ref: "#/components/schemas/GenericResponse"
   /api/auth/refresh:
     post:
-      summary: Refresh current user's tokens
+      summary: Refresh user's tokens
       tags:
         - Auth
       requestBody:
@@ -203,7 +203,7 @@ paths:
               schema:
                 $ref: "#/components/schemas/GenericResponse"
         "403":
-          description: Refresh token is blacklisted
+          description: Invalid, expired or revoked refresh token
           content:
             application/json:
               schema:
@@ -229,13 +229,13 @@ paths:
               schema:
                 $ref: "#/components/schemas/GenericResponse"
         "401":
-          description: Missing authorization token
+          description: Missing or Invalid authorization token
           content:
             application/json:
               schema:
                 $ref: "#/components/schemas/GenericResponse"
         "403":
-          description: Token has been revoked or Invalid Token
+          description: Invalid, expired or revoked access token
           content:
             application/json:
               schema:
@@ -261,7 +261,7 @@ paths:
               schema:
                 $ref: "#/components/schemas/GenericResponse"
         "400":
-          description: Input validation failed or verification code already sent
+          description: Input validation failed or User has no email
           content:
             application/json:
               schema:
@@ -273,19 +273,25 @@ paths:
               schema:
                 $ref: "#/components/schemas/GenericResponse"
         "403":
-          description: Token has been revoked, Invalid Token or User does not have an email
+          description: Invalid, expired or revoked access token
           content:
             application/json:
               schema:
                 $ref: "#/components/schemas/GenericResponse"
-        "404":
-          description: User not found or already verified
+        "409":
+          description: User already verified
           content:
             application/json:
               schema:
                 $ref: "#/components/schemas/GenericResponse"
         "500":
-          description: Internal server error or Verification code could not be sent
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/GenericResponse"
+        "503":
+          description: Verification code email could not be sent
           content:
             application/json:
               schema:
@@ -322,12 +328,12 @@ paths:
               schema:
                 $ref: "#/components/schemas/GenericResponse"
         "403":
-          description: Token has been revoked or Invalid Token
+          description: Invalid, expired or revoked access token
           content:
             application/json:
               schema:
                 $ref: "#/components/schemas/GenericResponse"
-        "404":
+        "422":
           description: Invalid or expired verification code
           content:
             application/json:
@@ -357,31 +363,27 @@ paths:
                   description: The email of the user
       responses:
         "200":
-          description: Password reset code was sent successfully
+          description: If email exists in our records, a password reset code will be sent
           content:
             application/json:
               schema:
                 $ref: "#/components/schemas/GenericResponse"
         "400":
-          description: Input validation failed or Reset code already sent
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/GenericResponse"
-        "403":
-          description: User does not have an email
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/GenericResponse"
-        "404":
-          description: User not found
+          description:
+            Input validation failed, User does not have an email or Password
+            Reset code already sent
           content:
             application/json:
               schema:
                 $ref: "#/components/schemas/GenericResponse"
         "500":
           description: Internal server error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/GenericResponse"
+        "503":
+          description: Password reset code email could not be sent
           content:
             application/json:
               schema:
@@ -418,13 +420,7 @@ paths:
               schema:
                 $ref: "#/components/schemas/GenericResponse"
         "400":
-          description: Input validation failed
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/GenericResponse"
-        "404":
-          description: Reset code expired or invalid
+          description: Input validation failed or Invalid/Expired reset code
           content:
             application/json:
               schema:
@@ -481,13 +477,7 @@ paths:
               schema:
                 $ref: "#/components/schemas/GenericResponse"
         "403":
-          description: Token has been revoked, Invalid Token or User has no password
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/GenericResponse"
-        "404":
-          description: User was not found
+          description: Invalid, expired, revoked access token or Password is not set
           content:
             application/json:
               schema:
@@ -540,7 +530,13 @@ paths:
               schema:
                 $ref: "#/components/schemas/GenericResponse"
         "403":
-          description: Token has been revoked or Invalid Token
+          description: Invalid, expired or revoked access token
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/GenericResponse"
+        "409":
+          description: Password is already set
           content:
             application/json:
               schema:
@@ -619,7 +615,7 @@ paths:
               schema:
                 $ref: "#/components/schemas/GenericResponse"
         "500":
-          description: Internal server error or Unidentified database error
+          description: Internal server error
           content:
             application/json:
               schema:
@@ -692,7 +688,7 @@ paths:
               schema:
                 $ref: "#/components/schemas/GenericResponse"
         "500":
-          description: Internal server error or Unidentified database error
+          description: Internal server error
           content:
             application/json:
               schema:
@@ -740,13 +736,7 @@ paths:
               schema:
                 $ref: "#/components/schemas/GenericResponse"
         "403":
-          description: Token has been revoked or Invalid Token
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/GenericResponse"
-        "404":
-          description: User was not found
+          description: Invalid, expired or revoked access token
           content:
             application/json:
               schema:
@@ -787,7 +777,7 @@ paths:
               schema:
                 $ref: "#/components/schemas/GenericResponse"
         "400":
-          description: Input validation failed or User has no password
+          description: Input validation failed
           content:
             application/json:
               schema:
@@ -799,13 +789,13 @@ paths:
               schema:
                 $ref: "#/components/schemas/GenericResponse"
         "403":
-          description: Token has been revoked or Invalid Token
+          description: Invalid, expired, revoked access token or Password is not set
           content:
             application/json:
               schema:
                 $ref: "#/components/schemas/GenericResponse"
         "404":
-          description: User was not found or Account was not found
+          description: Account was not found
           content:
             application/json:
               schema:
@@ -844,7 +834,7 @@ paths:
               schema:
                 $ref: "#/components/schemas/GenericResponse"
         "403":
-          description: Token has been revoked or Invalid Token
+          description: Invalid, expired or revoked access token
           content:
             application/json:
               schema:
@@ -888,13 +878,7 @@ paths:
               schema:
                 $ref: "#/components/schemas/GenericResponse"
         "403":
-          description: Token has been revoked or Invalid Token
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/GenericResponse"
-        "404":
-          description: User was not found
+          description: Invalid, expired or revoked access token
           content:
             application/json:
               schema:
@@ -931,7 +915,7 @@ paths:
               schema:
                 $ref: "#/components/schemas/GenericResponse"
         "403":
-          description: Token has been revoked or Invalid Token
+          description: Invalid, expired or revoked access token
           content:
             application/json:
               schema:
@@ -970,7 +954,7 @@ paths:
               schema:
                 $ref: "#/components/schemas/GenericResponse"
         "403":
-          description: Token has been revoked or Invalid Token
+          description: Invalid, expired or revoked access token
           content:
             application/json:
               schema:
@@ -1020,7 +1004,7 @@ paths:
               schema:
                 $ref: "#/components/schemas/GenericResponse"
         "403":
-          description: Token has been revoked or Invalid Token
+          description: Invalid, expired or revoked access token
           content:
             application/json:
               schema:
@@ -1077,7 +1061,7 @@ paths:
               schema:
                 $ref: "#/components/schemas/GenericResponse"
         "403":
-          description: Token has been revoked or Invalid Token
+          description: Invalid, expired or revoked access token
           content:
             application/json:
               schema:
